--- a/tryles.css
+++ b/tryles.css
@@ -49,7 +49,7 @@ a {
 
 .loader {
   max-height: 50vh;
-  z-index: 100;
+  z-index: 2147483645;
   bottom: 0;
   background-color: #fffbec;
   box-shadow: none;
